--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.56.1",
+    "web-vitals": "^2.1.4",
+    "webkit-npm": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
